# shop

./: .coverage  .gitignore  Makefile  db.sqlite3  pyproject.toml  requirements.txt
books/: settings.py  urls.py
store/: admin.py  models.py  serializers.py  views.py
store/migrations/: 0001_initial.py  0002_alter_book_price.py  0003_book_author_name.py
store/tests/: test_api.py  test_serializers.py
templates/: oauth.html
