[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["M1RRoN <mds.myst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "7.1.0"
Django = "4.1.7"
django-filter = "22.1"
djangorestframework = "3.14.0"
social-auth-app-django = "^5.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
